added table view controler to display all the alphabets with scroll view in dictionary section

--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -228,7 +228,7 @@
         <!--Alphabets-->
         <scene sceneID="cof-7F-4Om">
             <objects>
-                <tableViewController id="K5T-8p-juz" sceneMemberID="viewController">
+                <tableViewController id="K5T-8p-juz" customClass="AlphabetsTableViewController" customModule="SignMeUp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="NdG-ER-YrU">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
