--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -166,6 +166,27 @@
             </objects>
             <point key="canvasLocation" x="2935.1145038167938" y="354.92957746478874"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="TyM-IU-xCq">
+            <objects>
+                <viewController id="kWf-t8-iCp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ILQ-4O-TOv">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f1L-y0-EYP">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Z5z-XU-8Mf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ae5-sS-hFO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3872.5190839694656" y="363.38028169014086"/>
+        </scene>
         <!--Profile-->
         <scene sceneID="SRM-Rt-9FY">
             <objects>
